<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/string_request_text_input"
        android:paddingTop="20dp"
        android:hint="@string/edittext_hint"
        android:text="@string/default_request_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/send_string_request_button"
        android:text="@string/send_string_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/string_request_response"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>