<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mobicom.pinballclient.MainActivity">

    <TextView
        android:text="@string/pinballclient_introduction"
        android:textSize="25dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/string_request_button"
        android:text="@string/string_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onStringRequestButtonClick"/>
    <Button
        android:id="@+id/json_request_button"
        android:text="@string/json_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onJsonRequestButtonClick"/>
    <Button
        android:id="@+id/image_request_button"
        android:text="@string/image_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onImageRequestButtonClick"/>
</LinearLayout>
